# tauri-libmpv-render-test

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
